Creating Catalog Micro Service

--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,25 @@
     <groupId>com.fabiorapanelo</groupId>
     <artifactId>micro-ecommerce</artifactId>
     <packaging>pom</packaging>
-    <version>1.0</version>
-    <name>Micro Ecommerce</name>
+    <version>${microecommerce.version}</version>
+    <name>micro-ecommerce</name>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+        <microecommerce.version>1.0</microecommerce.version>
+    </properties>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.1.RELEASE</version>
+        <relativePath/>
+    </parent>
 
     <modules>
         <module>ordering</module>
+        <module>catalog</module>
     </modules>
 </project>
