--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>ordering</artifactId>
+	<artifactId>catalog</artifactId>
 	<packaging>jar</packaging>
-	<name>ordering</name>
-	<description>Ordering Micro Service</description>
+	<name>catalog</name>
+	<description>Catalog Micro Service</description>
 
 	<parent>
         <groupId>com.fabiorapanelo</groupId>
@@ -33,10 +33,6 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		 -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
