--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <microecommerce.version>1.0</microecommerce.version>
+        <microecommerce.version>0.0.1-SNAPSHOT</microecommerce.version>
     </properties>
 
     <parent>
