--- a/ordering/src/main/resources/application.properties
+++ b/ordering/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+spring.cloud.config.uri=http://localhost:8888
+spring.application.name=ordering
