--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,6 @@
     <modules>
         <module>ordering</module>
         <module>catalog</module>
+        <module>config-server</module>
     </modules>
 </project>
