--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port: 8888
-spring.cloud.config.server.git.uri: https://github.com/fabiorapanelo/micro-ecommerce/configuration
+spring.cloud.config.server.git.uri: https://github.com/fabiorapanelo/micro-ecommerce-configuration.git
