--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -7,7 +7,8 @@
 	<packaging>jar</packaging>
 	<name>config-server</name>
 	<description>Configuration Server</description>
-
+	<version>0.0.1-SNAPSHOT</version>
+	
 	<parent>
         <groupId>com.fabiorapanelo</groupId>
         <artifactId>micro-ecommerce</artifactId>
