--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -7,6 +7,7 @@
 	<packaging>jar</packaging>
 	<name>catalog</name>
 	<description>Catalog Micro Service</description>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<parent>
         <groupId>com.fabiorapanelo</groupId>
