--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,6 @@
         <module>ordering</module>
         <module>catalog</module>
         <module>config-server</module>
+        <module>discovery-server</module>
     </modules>
 </project>
