--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>discovery-server</artifactId>
+	<artifactId>gateway</artifactId>
 	<packaging>jar</packaging>
-	<name>discovery-server</name>
-	<description>Discovery Server using Eureka (Netflix)</description>
+	<name>gateway</name>
+	<description>Gateway Service using Zuul (Netflix)</description>
 
 	<parent>
         <groupId>com.fabiorapanelo</groupId>
@@ -17,7 +17,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-eureka-server</artifactId>
+			<artifactId>spring-cloud-starter-zuul</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -45,5 +49,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
