--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,6 @@
         <module>catalog</module>
         <module>config-server</module>
         <module>discovery-server</module>
+        <module>gateway</module>
     </modules>
 </project>
