Changes in the catalog micro-service

--- a/catalog/src/main/resources/bootstrap.yml
+++ b/catalog/src/main/resources/bootstrap.yml
@@ -3,8 +3,7 @@ spring:
     name: catalog
   cloud:
     config:
-      uri: http://localhost:8888
-      
+      uri: http://localhost:8888      
 ---
 
 spring:
@@ -12,3 +11,24 @@ spring:
   cloud:
      config:
         uri: http://config-server:8888
+---
+
+spring:
+  profiles: eclipse
+  cloud:
+    config:
+      enabled: false
+  jpa:
+    show-sql: true
+    generate-ddl: true
+
+server:
+  port: 8081
+
+solr:
+  host: http://localhost:8983/solr/item
+  
+eureka:
+  client:
+    enabled: false
+  
