Creating web and model projects, introducing ribbon to connect web to catalog

--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,12 @@
     </parent>
 
     <modules>
+        <module>model</module>
         <module>config-server</module>
         <module>discovery-server</module>
         <module>gateway</module>
         <module>ordering</module>
         <module>catalog</module>
+        <module>web</module>
     </modules>
 </project>
